--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		const header = document.querySelector('header');
 		const section = document.querySelector('section');
 		/* STEP 3: Store the URL of a JSON file in a variable */
-		let requestURL = "https://smccrindle.github.io/comp1073module10/js/i-scream.json";
+		let requestURL = "https://preston-beck.github.io/Lesson10/";
 		console.log(requestURL);
 		/* STEP 4: Create a new XHR object */
 		let request = new XMLHttpRequest();
